--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $(document).ready(function() {
 	<div id="slide2">
 		<div class="content" >
             <div class="quotes_container">
-		    <h3 class="quotes">Hey there, I'm Alejandro. I am studing Electrical Engineering at Univeristy of Central Florida. and a bunch of other nonsense that I can't think of right now but eventually will think of and once I do I shall type it around this area, sincerely yours truly.</h3>
+		    <h3 class="quotes">I'm an Electrical Engineering student at Univeristy of Central Florida. Currently working with force sensors connected to microcontrollers to identify proper walking behaviors,standing posture and help correct it..</h3>
 		  <!--<img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">Dr. Seuss </h4>-->
 		</div> 
 		</div> 
