--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script type="text/javascript"
+        src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
   <head>
 	   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
        <title>Alejandro Demian Velasco | 9543974214</title>
@@ -67,7 +69,8 @@ $(document).ready(function() {
 		<div class="content">
 			<div id="christmas_tree"> Logo maybe?</div>
             <h2>I don't know what to put here</h2>
-		    <h1>like seriously no idea</h1>
+		    <h1>Help please <input type="text" ng-model="Text" /</h1>
+		    <h1>{{ sometext }}</h1>
 		    <!--<div id="divider"> </div>-->
 		     <!--<h3>ELECTRICAL ENGINEER STUDENT </h3> -->
            <!--<div id="ribbon"></div>-->
