--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ $(document).ready(function() {
 		<div class="content">
 			<div id="christmas_tree"> Logo maybe?</div>
             <h2>I don't know what to put here</h2>
-		    <h1>Help please <input type="text" ng-model="Text" /</h1>
-		    <h1>{{ sometext }}</h1>
+		    <h3>Help please <input type="text" ng-model="Text" /</h3>
+		    <h1>{{ Text }}</h1>
 		    <!--<div id="divider"> </div>-->
 		     <!--<h3>ELECTRICAL ENGINEER STUDENT </h3> -->
            <!--<div id="ribbon"></div>-->
