--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@ $(document).ready(function() {
 <!----- SLIDES START --->   	
 	<div id="slide1">
 		<div class="content">
-			<div id="christmas_tree"> Logo maybe?</div>
-            <h2>I don't know what to put here</h2>
-		    <h3>Help please <input type="text" ng-model="Text" /</h3>
+            <h2>Set up your own title:</h2>
+		    <h3>Type your title here: <input type="text" ng-model="Text" /</h3>
 		    <h1>{{ Text }}</h1>
 		    <!--<div id="divider"> </div>-->
 		     <!--<h3>ELECTRICAL ENGINEER STUDENT </h3> -->
