--- a/index.html
+++ b/index.html
@@ -102,13 +102,12 @@ $(document).ready(function() {
 		<div class="content">
               <div class="quotes_container">
 		    <h3 class="quotes">Want to get in touch?</h3>
-		    <h3>demianvelasco@gmail.com | (954) 397-4214</h3>
 		   
 		  <!--<img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">Dr. Seuss </h4>-->
 		</div> 
 		<div id="contactButtons"> 
 			
-		    	<img src="img/twitter.png" align="left"/>
+		    	<img src="img/twitter.png" alt= "https://twitter.com/demianvelasco" align="left"/>
 			<img href="https://www.facebook.com/demianvelasco" src="img/facebook.png" align="left"/>
 			<img href="http://www.linkedin.com/pub/alejandro-demian-velasco/36/8a7/551" src="img/linkedin.png" align="left"/>
 			<img href="https://plus.google.com/+DemianVelasco/posts" src="img/gooplus.png" align="left"/>
