--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
   <head>
 	   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-       <title>Alejandro Demian Velasco | 9543974214</title>
+       <title>Alejandro Demian Velasco</title>
        <link rel="stylesheet" href="css/style.css"/>
 	   <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
        <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
